feat: use new apperr with codes
